--- a/overlay/AOSPAFrameworksOverlay/res/values/config.xml
+++ b/overlay/AOSPAFrameworksOverlay/res/values/config.xml
@@ -144,4 +144,7 @@
     <!-- Flag indicating whether we should enable smart battery. -->
     <bool name="config_smart_battery_available">true</bool>
 
+    <!-- Circle to search -->
+    <string name="config_defaultContextualSearchPackageName" translatable="false">com.google.android.googlequicksearchbox</string>
+
 </resources>
