--- a/overlay/CertifiedPropsOverlay/res/values/config.xml
+++ b/overlay/CertifiedPropsOverlay/res/values/config.xml
@@ -16,5 +16,11 @@
         <item>FINGERPRINT:foo/bar/bar:1.0/lorem/ipsum:dolor/sit-amet</item>
         <item>VERSION.RELEASE:1.0</item>
       -->
+      <item>BRAND:google</item>
+      <item>MANUFACTURER:Google</item>
+      <item>MODEL:Pixel 6</item>
+      <item>PRODUCT:oriole_beta</item>
+      <item>DEVICE:oriole</item>
+      <item>FINGERPRINT:google/oriole_beta/oriole:15/BP11.241121.010/12780007:user/release-keys</item>
     </string-array>
 </resources>
